--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "devDependencies": {
         "@babel/core": "^7.13.15",
         "@symfony/webpack-encore": "^1.1.2",
+        "axios": "^0.21.1",
         "bootstrap": "^4.6.0",
         "core-js": "^3.10.1",
         "eslint": "^7.24.0",
