Update app for add to cart

--- a/composer.json
+++ b/composer.json
@@ -5,26 +5,32 @@
         "php": "^7.4.0 || ^8.0",
         "ext-ctype": "*",
         "ext-iconv": "*",
-        "api-platform/core": "^2.1",
+        "api-platform/core": "^2.5",
         "composer/package-versions-deprecated": "^1.11",
         "doctrine/annotations": "^1.0",
-        "doctrine/doctrine-bundle": "^1.6 || ^2.0",
+        "doctrine/common": "^3",
+        "doctrine/doctrine-bundle": "^2",
         "doctrine/doctrine-fixtures-bundle": "^3.3",
-        "doctrine/inflector": "2.0.*",
-        "doctrine/orm": "^2.4.5",
-        "nelmio/cors-bundle": "^1.5 || ^2.0",
-        "phpdocumentor/reflection-docblock": "^3.0 || ^4.0 || ^5.0",
+        "doctrine/doctrine-migrations-bundle": "^3",
+        "doctrine/inflector": "1.4.* || ^2.0",
+        "doctrine/orm": "^2",
+        "nelmio/cors-bundle": "^2.1",
+        "phpdocumentor/reflection-docblock": "^5.2",
+        "ramsey/uuid": "^4.1",
         "sensio/framework-extra-bundle": "^5.5",
         "symfony/asset": "5.2.*",
         "symfony/console": "5.2.*",
-        "symfony/debug-pack": "^1.0",
         "symfony/dotenv": "5.2.*",
         "symfony/expression-language": "5.2.*",
         "symfony/flex": "^1.9",
         "symfony/form": "5.2.*",
         "symfony/framework-bundle": "5.2.*",
-        "symfony/orm-pack": "^1.0",
+        "symfony/monolog-bundle": "^3.0",
+        "symfony/property-access": "5.2.*",
+        "symfony/property-info": "5.2.*",
         "symfony/security-bundle": "5.2.*",
+        "symfony/serializer": "5.2.*",
+        "symfony/stopwatch": "5.2.*",
         "symfony/twig-bundle": "5.2.*",
         "symfony/validator": "5.2.*",
         "symfony/webpack-encore-bundle": "^1.7",
