--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
         "defaults"
     ],
     "devDependencies": {
+        "@fortawesome/fontawesome-free": "^5.15.1",
         "@babel/core": "^7.13.15",
         "@symfony/webpack-encore": "^1.1.2",
         "axios": "^0.21.1",
